--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "profile": "rm -f img.ppm && yarn tsc && node --prof dist/index.js && open img.ppm"
   },
   "dependencies": {
+    "colors": "^1.4.0",
     "gpu.js": "^2.11.0"
   }
 }
